Remove TreeIOException, leverage IOException when appropriate